--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -137,7 +137,7 @@
                           />
                         </picture>
                         <div
-                          class="_15p4g025"
+                          class="background__img-position-center"
                           style="
                             background-image: url(https://a0.muscache.com/im/pictures/c8b9d1e6-7f9d-4083-a932-c63858c2db77.jpg?im_w=720);
                             background-size: cover;
@@ -413,7 +413,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                                       <!-- -->/
                                       <!-- -->500</span
                                     ><span
-                                      class="text__highlight dir dir-ltr"
+                                      class="text_highlight dir dir-ltr"
                                       aria-atomic="true"
                                       aria-live="polite"
                                       >84 out of 500 characters used</span
@@ -449,7 +449,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                             </div>
                           </div>
                           <span
-                            class="text__highlight dir dir-ltr"
+                            class="text_highlight dir dir-ltr"
                             aria-live="assertive"
                           ></span>
                         </div>
@@ -460,7 +460,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="text__highlight dir dir-ltr"
+                      <span class="text_highlight dir dir-ltr"
                         >Your progress: step 8 out of 10.</span
                       >
                       <div class="_9kv7q8">
