--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -150,7 +150,7 @@
                           />
                         </picture>
                         <div
-                          class="_15p4g025"
+                          class="background__img-position-center"
                           style="
                             background-image: url(https://a0.muscache.com/im/pictures/f47aefea-4345-4b4d-bfbc-c28acbe9d0ae.jpg?im_w=720);
                             background-size: cover;
