--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -137,7 +137,7 @@
                           />
                         </picture>
                         <div
-                          class="_15p4g025"
+                          class="background__img-position-center"
                           style="
                             background-image: url(https://a0.muscache.com/im/pictures/cca60d3e-5275-49e9-9661-f1b8c7b2093c.jpg?im_w=720);
                             background-size: cover;
@@ -515,7 +515,7 @@
                                                               />
                                                             </picture>
                                                             <div
-                                                              class="_15p4g025"
+                                                              class="background__img-position-center"
                                                               style="
                                                                 background-image: url('https://a0.muscache.com/im/pictures/miso/Hosting-53430351/original/7e86c311-8b75-4a8f-88ba-4e56c7197293.jpeg?im_w=720');
                                                                 background-size: cover;
@@ -657,7 +657,7 @@
                                                               />
                                                             </picture>
                                                             <div
-                                                              class="_15p4g025"
+                                                              class="background__img-position-center"
                                                               style="
                                                                 background-image: url('https://a0.muscache.com/im/pictures/miso/Hosting-53430351/original/d196f6fb-e4ee-40aa-a979-02660753d4b5.jpeg?im_w=720');
                                                                 background-size: cover;
@@ -794,7 +794,7 @@
                                                               />
                                                             </picture>
                                                             <div
-                                                              class="_15p4g025"
+                                                              class="background__img-position-center"
                                                               style="
                                                                 background-image: url('https://a0.muscache.com/im/pictures/miso/Hosting-53430351/original/8e7eb7a8-b85b-4296-81d1-42e74e0ba4b3.jpeg?im_w=720');
                                                                 background-size: cover;
@@ -931,7 +931,7 @@
                                                               />
                                                             </picture>
                                                             <div
-                                                              class="_15p4g025"
+                                                              class="background__img-position-center"
                                                               style="
                                                                 background-image: url('https://a0.muscache.com/im/pictures/miso/Hosting-53430351/original/013fef00-a684-4031-a72b-2efe5814d397.jpeg?im_w=720');
                                                                 background-size: cover;
@@ -1068,7 +1068,7 @@
                                                               />
                                                             </picture>
                                                             <div
-                                                              class="_15p4g025"
+                                                              class="background__img-position-center"
                                                               style="
                                                                 background-image: url('https://a0.muscache.com/im/pictures/miso/Hosting-53430351/original/5ea8222f-8254-4d5c-af7d-6ea9f140385e.jpeg?im_w=720');
                                                                 background-size: cover;
@@ -1179,7 +1179,7 @@
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="text__highlight dir dir-ltr"
+                      <span class="text_highlight dir dir-ltr"
                         >Your progress: step 6 out of 10.</span
                       >
                       <div class="_9kv7q8">
