--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -248,7 +248,7 @@
                                       data-original-uri="https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_medium"
                                     />
                                     <div
-                                      class="_15p4g025"
+                                      class="background__img-position-center"
                                       style="
                                         background-image: url(https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_medium);
                                         background-size: cover;
@@ -384,7 +384,7 @@
                                   </ul>
                                   <ul class="_6oxhmf">
                                     <li class="flex-items-center-content-between">
-                                      <div class="_a7a5sx">+6 more</div>
+                                      <div class="text__color-gray">+6 more</div>
                                     </li>
                                   </ul>
                                 </div>
