--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -205,7 +205,7 @@
                                     data-original-uri="https://a0.muscache.com/im/pictures/eadbcbdb-d57d-44d9-9a76-665a7a4d1cd7.jpg?im_w=240"
                                   />
                                   <div
-                                    class="_15p4g025"
+                                    class="background__img-position-center"
                                     style="
                                       background-image: url(https://a0.muscache.com/im/pictures/eadbcbdb-d57d-44d9-9a76-665a7a4d1cd7.jpg?im_w=240);
                                       background-size: cover;
@@ -256,7 +256,7 @@
                                     data-original-uri="https://a0.muscache.com/im/pictures/d1af74db-58eb-46bf-b3f5-e42b6c9892db.jpg?im_w=240"
                                   />
                                   <div
-                                    class="_15p4g025"
+                                    class="background__img-position-center"
                                     style="
                                       background-image: url(https://a0.muscache.com/im/pictures/d1af74db-58eb-46bf-b3f5-e42b6c9892db.jpg?im_w=240);
                                       background-size: cover;
@@ -307,7 +307,7 @@
                                     data-original-uri="https://a0.muscache.com/im/pictures/32897901-1870-4895-8e23-f08dc0e61750.jpg?im_w=240"
                                   />
                                   <div
-                                    class="_15p4g025"
+                                    class="background__img-position-center"
                                     style="
                                       background-image: url(https://a0.muscache.com/im/pictures/32897901-1870-4895-8e23-f08dc0e61750.jpg?im_w=240);
                                       background-size: cover;
@@ -358,7 +358,7 @@
                                     data-original-uri="https://a0.muscache.com/im/pictures/7ad56bb1-ed9f-4dcb-a14c-2523da331b44.jpg?im_w=240"
                                   />
                                   <div
-                                    class="_15p4g025"
+                                    class="background__img-position-center"
                                     style="
                                       background-image: url(https://a0.muscache.com/im/pictures/7ad56bb1-ed9f-4dcb-a14c-2523da331b44.jpg?im_w=240);
                                       background-size: cover;
@@ -409,7 +409,7 @@
                                     data-original-uri="https://a0.muscache.com/im/pictures/d52fb4e7-39a4-46df-9bf9-67e56d35eeca.jpg?im_w=240"
                                   />
                                   <div
-                                    class="_15p4g025"
+                                    class="background__img-position-center"
                                     style="
                                       background-image: url(https://a0.muscache.com/im/pictures/d52fb4e7-39a4-46df-9bf9-67e56d35eeca.jpg?im_w=240);
                                       background-size: cover;
@@ -460,7 +460,7 @@
                                     data-original-uri="https://a0.muscache.com/im/pictures/a2c9ad21-b159-4fd2-b417-d810fb23c6a9.jpg?im_w=240"
                                   />
                                   <div
-                                    class="_15p4g025"
+                                    class="background__img-position-center"
                                     style="
                                       background-image: url(https://a0.muscache.com/im/pictures/a2c9ad21-b159-4fd2-b417-d810fb23c6a9.jpg?im_w=240);
                                       background-size: cover;
@@ -479,7 +479,7 @@
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="text__highlight dir dir-ltr"
+                      <span class="text_highlight dir dir-ltr"
                         >Your progress: step 1 out of 10.</span
                       >
                       <div class="_9kv7q8">
