--- a/contact-host.html
+++ b/contact-host.html
@@ -260,7 +260,7 @@
                                                     ></path>
                                                   </g></svg
                                                 ><span
-                                                  class="text__highlight dir dir-ltr"
+                                                  class="text_highlight dir dir-ltr"
                                                   >Back</span
                                                 >
                                               </div></a
@@ -277,7 +277,7 @@
                                           >
                                             <div class="section-container">
                                               <div
-                                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                                class="margin__auto-x max__width dir dir-ltr"
                                                 style="--maxWidth: 1120px"
                                               >
                                                 <div
@@ -357,7 +357,7 @@
                                                                   "
                                                                 />
                                                                 <div
-                                                                  class="_15p4g025"
+                                                                  class="background__img-position-center"
                                                                   style="
                                                                     background-image: url('https://a0.muscache.com/im/pictures/user/bcdf359a-cbbf-4530-996b-ed8646baf340.jpg?im_w=240');
                                                                     background-size: cover;
@@ -416,7 +416,7 @@
                                           >
                                             <div class="section-container">
                                               <div
-                                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                                class="margin__auto-x max__width dir dir-ltr"
                                                 style="--maxWidth: 1120px"
                                               >
                                                 <div
@@ -463,7 +463,7 @@
                                           >
                                             <div class="section-container">
                                               <div
-                                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                                class="margin__auto-x max__width dir dir-ltr"
                                                 style="--maxWidth: 1120px"
                                               >
                                                 <div
@@ -515,7 +515,7 @@
                                           >
                                             <div class="section-container">
                                               <div
-                                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                                class="margin__auto-x max__width dir dir-ltr"
                                                 style="--maxWidth: 1120px"
                                               >
                                                 <div
@@ -561,7 +561,7 @@
                                           >
                                             <div class="section-container">
                                               <div
-                                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                                class="margin__auto-x max__width dir dir-ltr"
                                                 style="--maxWidth: 1120px"
                                               >
                                                 <div
@@ -1174,7 +1174,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="text__highlight dir dir-ltr"
+                                                                            class="text_highlight dir dir-ltr"
                                                                             >I’m
                                                                             flexible</span
                                                                           ><span
@@ -1220,7 +1220,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="text__highlight dir dir-ltr"
+                                                                            class="text_highlight dir dir-ltr"
                                                                             >Europe</span
                                                                           ><span
                                                                             aria-hidden="true"
@@ -1264,7 +1264,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="text__highlight dir dir-ltr"
+                                                                            class="text_highlight dir dir-ltr"
                                                                             >Spain</span
                                                                           ><span
                                                                             aria-hidden="true"
@@ -1308,7 +1308,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="text__highlight dir dir-ltr"
+                                                                            class="text_highlight dir dir-ltr"
                                                                             >United
                                                                             States</span
                                                                           ><span
@@ -1354,7 +1354,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="text__highlight dir dir-ltr"
+                                                                            class="text_highlight dir dir-ltr"
                                                                             >France</span
                                                                           ><span
                                                                             aria-hidden="true"
@@ -1398,7 +1398,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="text__highlight dir dir-ltr"
+                                                                            class="text_highlight dir dir-ltr"
                                                                             >Italy</span
                                                                           ><span
                                                                             aria-hidden="true"
@@ -1684,7 +1684,7 @@
                                           <div class="section-container">
                                             <div
                                               style="--maxWidth: 1120px"
-                                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                                              class="margin__auto-x max__width dir dir-ltr"
                                             >
                                               <div
                                                 data-plugin-in-point-id="NAV_MOBILE"
@@ -1722,7 +1722,7 @@
                                                         ></path>
                                                       </g></svg
                                                     ><span
-                                                      class="text__highlight dir dir-ltr"
+                                                      class="text_highlight dir dir-ltr"
                                                       >Back</span
                                                     >
                                                   </div></a
@@ -1821,7 +1821,7 @@
                                                                   "
                                                                 />
                                                                 <div
-                                                                  class="_15p4g025"
+                                                                  class="background__img-position-center"
                                                                   style="
                                                                     background-image: url('https://a0.muscache.com/im/pictures/user/bcdf359a-cbbf-4530-996b-ed8646baf340.jpg?im_w=240');
                                                                     background-size: cover;
@@ -2199,7 +2199,7 @@
                                                                     >
                                                                   </div>
                                                                   <span
-                                                                    class="text__highlight dir dir-ltr"
+                                                                    class="text_highlight dir dir-ltr"
                                                                     >₱49,950 per
                                                                     night</span
                                                                   ></span
@@ -2237,7 +2237,7 @@
                                                                       reviews</span
                                                                     ></span
                                                                   ><span
-                                                                    class="text__highlight dir dir-ltr"
+                                                                    class="text_highlight dir dir-ltr"
                                                                     >Rated 4.97
                                                                     out of 5
                                                                     from 134
@@ -2319,7 +2319,7 @@
                                                                 data-original-uri="https://a0.muscache.com/im/pictures/c1dd351c-3898-415a-bcad-bc85d642dc98.jpg?aki_policy=large"
                                                             /></picture>
                                                             <div
-                                                              class="_15p4g025"
+                                                              class="background__img-position-center"
                                                               style="
                                                                 background-image: url(https://a0.muscache.com/im/pictures/c1dd351c-3898-415a-bcad-bc85d642dc98.jpg?im_w=720);
                                                                 background-size: cover;
