--- a/edit/about.html
+++ b/edit/about.html
@@ -483,7 +483,7 @@
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_x_medium');
                                                       background-size: cover;
@@ -578,7 +578,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                             <span aria-hidden="true"
                                               >162/850</span
                                             ><span
-                                              class="text__highlight dir dir-ltr"
+                                              class="text_highlight dir dir-ltr"
                                               aria-atomic="true"
                                               aria-live="polite"
                                               >162 out of 850 characters
