--- a/merchandising.html
+++ b/merchandising.html
@@ -309,7 +309,7 @@
                                                 ><span
                                                   id="searchInputDescriptionId"
                                                   ><span
-                                                    class="text__highlight dir dir-ltr"
+                                                    class="text_highlight dir dir-ltr"
                                                     >Currently showing Anytime,
                                                     Add guests. Change
                                                     search.</span
@@ -4272,7 +4272,7 @@
                                                   aria-labelledby="littleSearchLabel"
                                                 >
                                                   <span
-                                                    class="text__highlight dir dir-ltr"
+                                                    class="text_highlight dir dir-ltr"
                                                     id="littleSearchLabel"
                                                     >Start your search</span
                                                   ><button
@@ -4281,7 +4281,7 @@
                                                     type="button"
                                                   >
                                                     <span
-                                                      class="text__highlight dir dir-ltr"
+                                                      class="text_highlight dir dir-ltr"
                                                       >Location</span
                                                     >
                                                     <div
@@ -4298,7 +4298,7 @@
                                                     type="button"
                                                   >
                                                     <span
-                                                      class="text__highlight dir dir-ltr"
+                                                      class="text_highlight dir dir-ltr"
                                                       >Check in / Check
                                                       out</span
                                                     >
@@ -4316,7 +4316,7 @@
                                                     type="button"
                                                   >
                                                     <span
-                                                      class="text__highlight dir dir-ltr"
+                                                      class="text_highlight dir dir-ltr"
                                                       >Guests</span
                                                     >
                                                     <div
@@ -5115,7 +5115,7 @@
                                                   "
                                                 >
                                                   <div class="_16sb0g4v"></div>
-                                                  <div class="_h69t7tv">
+                                                  <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -5941,7 +5941,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_16sb0g4v"></div>
-                                                  <div class="_h69t7tv">
+                                                  <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -6290,7 +6290,7 @@
                                             <div class="_1jnlcv5q">
                                               <span
                                                 ><div class="_16sb0g4v"></div>
-                                                <div class="_h69t7tv">
+                                                <div class="hidden__md">
                                                   <div class="header__logo">
                                                     <div
                                                       class="flex-column"
@@ -6374,7 +6374,7 @@
                                               <div class="_a0tp2q">
                                                 <div>
                                                   <div class="_16sb0g4v"></div>
-                                                  <div class="_h69t7tv">
+                                                  <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <a
                                                         href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -6888,7 +6888,7 @@
                                                 </div>
                                                 <div>
                                                   <div class="_16sb0g4v"></div>
-                                                  <div class="_h69t7tv">
+                                                  <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <a
                                                         href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -7399,7 +7399,7 @@
                                                 </div>
                                                 <div>
                                                   <div class="_16sb0g4v"></div>
-                                                  <div class="_h69t7tv">
+                                                  <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <a
                                                         href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -7910,7 +7910,7 @@
                                                 </div>
                                                 <div>
                                                   <div class="_16sb0g4v"></div>
-                                                  <div class="_h69t7tv">
+                                                  <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <a
                                                         href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -8442,7 +8442,7 @@
                                             <div class="_1jnlcv5q">
                                               <span
                                                 ><div class="_16sb0g4v"></div>
-                                                <div class="_h69t7tv">
+                                                <div class="hidden__md">
                                                   <div class="header__logo">
                                                     <div
                                                       class="flex-column"
@@ -8545,7 +8545,7 @@
                                                     <div
                                                       class="_16sb0g4v"
                                                     ></div>
-                                                    <div class="_h69t7tv">
+                                                    <div class="hidden__md">
                                                       <div class="header__logo">
                                                         <a
                                                           href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -9072,7 +9072,7 @@
                                                     <div
                                                       class="_16sb0g4v"
                                                     ></div>
-                                                    <div class="_h69t7tv">
+                                                    <div class="hidden__md">
                                                       <div class="header__logo">
                                                         <a
                                                           href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -9596,7 +9596,7 @@
                                                     <div
                                                       class="_16sb0g4v"
                                                     ></div>
-                                                    <div class="_h69t7tv">
+                                                    <div class="hidden__md">
                                                       <div class="header__logo">
                                                         <a
                                                           href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -10120,7 +10120,7 @@
                                                     <div
                                                       class="_16sb0g4v"
                                                     ></div>
-                                                    <div class="_h69t7tv">
+                                                    <div class="hidden__md">
                                                       <div class="header__logo">
                                                         <a
                                                           href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
@@ -10677,7 +10677,7 @@
                                           <div class="_1jnlcv5q">
                                             <span
                                               ><div class="_16sb0g4v"></div>
-                                              <div class="_h69t7tv">
+                                              <div class="hidden__md">
                                                 <div class="header__logo">
                                                   <div
                                                     class="flex-column"
@@ -10844,7 +10844,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_16sb0g4v"></div>
-                                                  <div class="_h69t7tv">
+                                                  <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -11235,7 +11235,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_16sb0g4v"></div>
-                                                  <div class="_h69t7tv">
+                                                  <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -11600,7 +11600,7 @@
                                               <div>
                                                 <div class="_17t88vi">
                                                   <div class="_16sb0g4v"></div>
-                                                  <div class="_h69t7tv">
+                                                  <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -12273,7 +12273,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_16sb0g4v"></div>
-                                                  <div class="_h69t7tv">
+                                                  <div class="hidden__md">
                                                     <div class="header__logo">
                                                       <div
                                                         class="_mmvgcv"
@@ -12612,7 +12612,7 @@
                                     <div class="section-container">
                                       <div
                                         style="--maxWidth: 1120px"
-                                        class="plmw1e5 mq5rv0q dir dir-ltr"
+                                        class="margin__auto-x max__width dir dir-ltr"
                                       >
                                         <div class="c1yo0219 dir dir-ltr">
                                           <footer
@@ -12878,7 +12878,7 @@
                                               </div>
                                               <div class="footer__copyright">
                                                 <span
-                                                  class="text__highlight dir dir-ltr"
+                                                  class="text_highlight dir dir-ltr"
                                                   >Footer section</span
                                                 >
                                                 <section>
@@ -12891,7 +12891,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Choose a
                                                               language</span
                                                             ><span
@@ -12924,7 +12924,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Choose a
                                                               currency</span
                                                             ><span
@@ -12993,7 +12993,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Choose a
                                                               language</span
                                                             ><span
@@ -13026,7 +13026,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Choose a
                                                               currency</span
                                                             ><span
@@ -13218,7 +13218,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Choose a
                                                               language</span
                                                             ><span
@@ -13251,7 +13251,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Choose a
                                                               currency</span
                                                             ><span
