--- a/resolutions.html
+++ b/resolutions.html
@@ -118,7 +118,7 @@
                                 "
                               />
                               <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="
                                   background-image: url('https://a0.muscache.com/im/users/25152659/profile_pic/1423833182/original.jpg?aki_policy=profile_small');
                                   background-size: cover;
@@ -196,7 +196,7 @@
                                 aria-labelledby="intent-request-money-row-title"
                                 aria-describedby="intent-request-money-row-subtitle"
                                 id="intent-request-money-row-radio-button"
-                                class="_83s1a2"
+                                class="radio__button"
                                 type="radio"
                                 value="REQUEST_MONEY"
                               />
