--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -141,7 +141,7 @@
                                 "
                               />
                               <div
-                                class="_15p4g025"
+                                class="background__img-position-center"
                                 style="
                                   background-image: url('https://a0.muscache.com/im/users/25152659/profile_pic/1423833182/original.jpg?aki_policy=profile_small');
                                   background-size: cover;
@@ -189,7 +189,7 @@
                                   aria-labelledby="reason-GUEST_OFFER_DAMAGE-row-title"
                                   aria-describedby="reason-GUEST_OFFER_DAMAGE-row-subtitle"
                                   id="reason-GUEST_OFFER_DAMAGE-row-radio-button"
-                                  class="_83s1a2"
+                                  class="radio__button"
                                   type="radio"
                                   value="GUEST_OFFER_DAMAGE"
                                 />
@@ -258,7 +258,7 @@
                                   aria-labelledby="reason-GUEST_OFFER_OTHER-row-title"
                                   aria-describedby="reason-GUEST_OFFER_OTHER-row-subtitle"
                                   id="reason-GUEST_OFFER_OTHER-row-radio-button"
-                                  class="_83s1a2"
+                                  class="radio__button"
                                   type="radio"
                                   value="GUEST_OFFER_OTHER"
                                 />
