--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -172,7 +172,7 @@
                               "
                             />
                             <div
-                              class="_15p4g025"
+                              class="background__img-position-center"
                               style="
                                 background-image: url('https://a0.muscache.com/im/users/25152659/profile_pic/1423833182/original.jpg?aki_policy=profile_small');
                                 background-size: cover;
@@ -302,7 +302,7 @@
                                   </div>
                                 </div>
                                 <span
-                                  class="text__highlight dir dir-ltr"
+                                  class="text_highlight dir dir-ltr"
                                   id="payment_option_selector_described_by"
                                   >Select or add a new payment method</span
                                 >
