--- a/reviews-tell-us.html
+++ b/reviews-tell-us.html
@@ -92,7 +92,7 @@
                               "
                             />
                             <div
-                              class="_15p4g025"
+                              class="background__img-position-center"
                               style="
                                 background-image: url('https://a0.muscache.com/pictures/a8ca0349-95fd-48cc-8b98-796c72189397.jpg');
                                 background-size: contain;
