--- a/submission/about.html
+++ b/submission/about.html
@@ -1160,7 +1160,7 @@
                                           "
                                         />
                                         <div
-                                          class="_15p4g025"
+                                          class="background__img-position-center"
                                           style="
                                             background-image: url('https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_x_medium');
                                             background-size: cover;
@@ -1230,7 +1230,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                               <div class="_pxnjg" id="about_host_input-help">
                                 <span aria-hidden="true">574/850</span
                                 ><span
-                                  class="text__highlight dir dir-ltr"
+                                  class="text_highlight dir dir-ltr"
                                   aria-atomic="true"
                                   aria-live="polite"
                                   >574 out of 850 characters used</span
