--- a/submission/cancel.html
+++ b/submission/cancel.html
@@ -1067,7 +1067,7 @@
                                         id="strict"
                                         data-testid="policy__strict"
                                         name="lyt-radio-cancellation-policy"
-                                        class="_83s1a2"
+                                        class="radio__button"
                                         type="radio"
                                         value="CANCEL_STRICT"
                                       />
