--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1342,7 +1342,7 @@
                                     >
                                       Light<span
                                         aria-hidden="true"
-                                        class="_1vwho579"
+                                        class="button__hidden-text"
                                         >Light</span
                                       ></button
                                     ><button
@@ -1355,7 +1355,7 @@
                                     >
                                       Moderate<span
                                         aria-hidden="true"
-                                        class="_1vwho579"
+                                        class="button__hidden-text"
                                         >Moderate</span
                                       ></button
                                     ><button
@@ -1368,7 +1368,7 @@
                                     >
                                       Strenuous<span
                                         aria-hidden="true"
-                                        class="_1vwho579"
+                                        class="button__hidden-text"
                                         >Strenuous</span
                                       ></button
                                     ><button
@@ -1381,7 +1381,7 @@
                                     >
                                       Extreme<span
                                         aria-hidden="true"
-                                        class="_1vwho579"
+                                        class="button__hidden-text"
                                         >Extreme</span
                                       >
                                     </button>
@@ -1418,7 +1418,7 @@
                                     >
                                       Beginner<span
                                         aria-hidden="true"
-                                        class="_1vwho579"
+                                        class="button__hidden-text"
                                         >Beginner</span
                                       ></button
                                     ><button
@@ -1431,7 +1431,7 @@
                                     >
                                       Intermediate<span
                                         aria-hidden="true"
-                                        class="_1vwho579"
+                                        class="button__hidden-text"
                                         >Intermediate</span
                                       ></button
                                     ><button
@@ -1444,7 +1444,7 @@
                                     >
                                       Advanced<span
                                         aria-hidden="true"
-                                        class="_1vwho579"
+                                        class="button__hidden-text"
                                         >Advanced</span
                                       ></button
                                     ><button
@@ -1457,7 +1457,7 @@
                                     >
                                       Expert<span
                                         aria-hidden="true"
-                                        class="_1vwho579"
+                                        class="button__hidden-text"
                                         >Expert</span
                                       >
                                     </button>
