--- a/trips.html
+++ b/trips.html
@@ -185,7 +185,7 @@
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div
-                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                class="margin__auto-x max__width dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <div
@@ -222,7 +222,7 @@
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div
-                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                class="margin__auto-x max__width dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <div
@@ -361,7 +361,7 @@
                                             "
                                         /></picture>
                                         <div
-                                          class="_15p4g025"
+                                          class="background__img-position-center"
                                           style="
                                             background-image: url('https://a0.muscache.com/im/pictures/d727f355-3f10-44b5-9750-d1efca2438fc.jpg?im_w=720');
                                             background-size: cover;
@@ -379,7 +379,7 @@
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div
-                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                class="margin__auto-x max__width dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <div
@@ -415,7 +415,7 @@
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div
-                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                class="margin__auto-x max__width dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <div
@@ -486,7 +486,7 @@
                                                       "
                                                   /></picture>
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/187cf174-8859-4bcc-bd8b-4960ad1298c1.jpeg?im_w=720');
                                                       background-size: cover;
@@ -609,7 +609,7 @@
                                                       "
                                                   /></picture>
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3903130-media_library/original/b63dc66d-f9f3-43b2-af96-44f324f21d15.jpeg?im_w=720');
                                                       background-size: cover;
@@ -681,7 +681,7 @@
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div
-                                class="plmw1e5 mq5rv0q dir dir-ltr"
+                                class="margin__auto-x max__width dir dir-ltr"
                                 style="--maxWidth: 1120px"
                               >
                                 <div
@@ -891,7 +891,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text__highlight dir dir-ltr"
+                          <span class="text_highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -900,7 +900,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -925,7 +925,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -966,7 +966,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -991,7 +991,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1150,7 +1150,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1175,7 +1175,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
