--- a/wishlists.html
+++ b/wishlists.html
@@ -266,7 +266,7 @@
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/im/pictures/df261cb9-12d7-4f69-9562-40e2d5fd97e3.jpg?im_w=720');
                                                       background-size: cover;
@@ -337,7 +337,7 @@
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3905317-media_library/original/3cafc1ba-890d-48c2-900e-a34d42a99fc8.jpeg?aki_policy=exp_lg');
                                                       background-size: cover;
@@ -398,7 +398,7 @@
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-1672989-media_library/original/19043735-ace6-4d85-979b-02fc65b483c8.jpeg?aki_policy=exp_lg');
                                                       background-size: cover;
@@ -461,7 +461,7 @@
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2222609-media_library/original/5d5cca88-c89b-44c2-bb86-b5837feab0d2.jpeg?aki_policy=exp_lg');
                                                       background-size: cover;
@@ -524,7 +524,7 @@
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-1654801-media_library/original/1ad97a42-0606-4401-a631-aa88b6acdd77.jpeg?aki_policy=exp_lg');
                                                       background-size: cover;
@@ -734,7 +734,7 @@
                             </div>
                           </div>
                           <section>
-                            <div class="_h69t7tv">
+                            <div class="hidden__md">
                               <div>
                                 <ul class="_f68cfc">
                                   <li class="_gcfn5x">
@@ -768,7 +768,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/df261cb9-12d7-4f69-9562-40e2d5fd97e3.jpg?im_w=720"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/df261cb9-12d7-4f69-9562-40e2d5fd97e3.jpg?im_w=720);
                                                   background-size: cover;
@@ -800,7 +800,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3033220-media_library/original/5f7f9363-bbd9-4503-8bcf-ac0671eb34e1.jpg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-3033220-media_library/original/5f7f9363-bbd9-4503-8bcf-ac0671eb34e1.jpg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -832,7 +832,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-4040010-media_library/original/9f409c6b-61a8-4377-8760-64054f138e26.jpeg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-4040010-media_library/original/9f409c6b-61a8-4377-8760-64054f138e26.jpeg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -882,7 +882,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3905317-media_library/original/3cafc1ba-890d-48c2-900e-a34d42a99fc8.jpeg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-3905317-media_library/original/3cafc1ba-890d-48c2-900e-a34d42a99fc8.jpeg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -914,7 +914,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-1694352-media_library/original/d78386fa-2210-4fe6-9fc6-c21756db3376.jpg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-1694352-media_library/original/d78386fa-2210-4fe6-9fc6-c21756db3376.jpg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -946,7 +946,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-1675237-poster/original/6c4cc0a4-47d3-4f87-a0e7-98d1e5e682c9.jpeg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-1675237-poster/original/6c4cc0a4-47d3-4f87-a0e7-98d1e5e682c9.jpeg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -993,7 +993,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-1672989-media_library/original/19043735-ace6-4d85-979b-02fc65b483c8.jpeg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-1672989-media_library/original/19043735-ace6-4d85-979b-02fc65b483c8.jpeg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -1025,7 +1025,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-4094952-media_library/original/a9fff94c-70e3-45d3-9170-bc918f579e54.jpg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-4094952-media_library/original/a9fff94c-70e3-45d3-9170-bc918f579e54.jpg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -1057,7 +1057,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-4171957-media_library/original/bce29d3c-3103-476b-a9cf-2d030b4ed78f.jpeg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-4171957-media_library/original/bce29d3c-3103-476b-a9cf-2d030b4ed78f.jpeg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -1105,7 +1105,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-2222609-media_library/original/5d5cca88-c89b-44c2-bb86-b5837feab0d2.jpeg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-2222609-media_library/original/5d5cca88-c89b-44c2-bb86-b5837feab0d2.jpeg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -1138,7 +1138,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/1bd0c53c-a3fd-4835-8796-d23f875de345.jpeg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/1bd0c53c-a3fd-4835-8796-d23f875de345.jpeg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -1185,7 +1185,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-1654801-media_library/original/1ad97a42-0606-4401-a631-aa88b6acdd77.jpeg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-1654801-media_library/original/1ad97a42-0606-4401-a631-aa88b6acdd77.jpeg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -1217,7 +1217,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-1681760-media_library/original/4175f9f1-2ac9-42cf-ae85-0a6ffc326146.jpeg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-1681760-media_library/original/4175f9f1-2ac9-42cf-ae85-0a6ffc326146.jpeg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -1249,7 +1249,7 @@
                                                 data-original-uri="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3919414-media_library/original/cc740835-bd9f-4fce-a11c-02e30b47f0ae.jpeg?aki_policy=exp_lg"
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url(https://a0.muscache.com/im/pictures/lombard/MtTemplate-3919414-media_library/original/cc740835-bd9f-4fce-a11c-02e30b47f0ae.jpeg?aki_policy=exp_lg);
                                                   background-size: cover;
@@ -1439,7 +1439,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text__highlight dir dir-ltr"
+                          <span class="text_highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -1448,7 +1448,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1473,7 +1473,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1514,7 +1514,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1539,7 +1539,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1695,7 +1695,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1720,7 +1720,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
