--- a/account-notifications.html
+++ b/account-notifications.html
@@ -1923,7 +1923,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text__highlight dir dir-ltr"
+                          <span class="text_highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -1932,7 +1932,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1957,7 +1957,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1998,7 +1998,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -2023,7 +2023,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -2179,7 +2179,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -2204,7 +2204,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
