--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -399,7 +399,7 @@
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="text__highlight dir dir-ltr"
+                      <span class="text_highlight dir dir-ltr"
                         >Your progress: step 10 out of 10.</span
                       >
                       <div class="_9kv7q8">
