--- a/calendar_week.html
+++ b/calendar_week.html
@@ -71,7 +71,7 @@
                               <div class="flex-item">
                                 <div></div>
                               </div></div></span
-                          ><span class="text__highlight dir dir-ltr"
+                          ><span class="text_highlight dir dir-ltr"
                             >Experience hosting dashboard</span
                           >
                         </button>
@@ -3204,7 +3204,7 @@
                                 <div class="_1n9ujnd">
                                   <div class="_1oujxnw">
                                     <div class="_1p7iugi">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >12:00 to 12:30 PM (PST)</span
                                       ><span aria-hidden="true"
                                         >12:00 – 12:30 PM (PST)</span
@@ -3222,7 +3222,7 @@
                                   </div>
                                   <div class="_l7kbrl">
                                     <div class="_1d2y1bv">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Private group · Not booked yet</span
                                       ><span aria-hidden="true"
                                         ><div class="inline">
@@ -3260,7 +3260,7 @@
                                       "
                                     />
                                     <div
-                                      class="_15p4g025"
+                                      class="background__img-position-center"
                                       style="
                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large');
                                         background-size: cover;
@@ -3283,7 +3283,7 @@
                                 <div class="_1n9ujnd">
                                   <div class="_1oujxnw">
                                     <div class="_1p7iugi">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >11:00 to 11:30 PM (PST)</span
                                       ><span aria-hidden="true"
                                         >11:00 – 11:30 PM (PST)</span
@@ -3301,7 +3301,7 @@
                                   </div>
                                   <div class="_l7kbrl">
                                     <div class="_1d2y1bv">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Private group · Not booked yet</span
                                       ><span aria-hidden="true"
                                         ><div class="inline">
@@ -3339,7 +3339,7 @@
                                       "
                                     />
                                     <div
-                                      class="_15p4g025"
+                                      class="background__img-position-center"
                                       style="
                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large');
                                         background-size: cover;
