--- a/covidsafety.html
+++ b/covidsafety.html
@@ -587,7 +587,7 @@
                                                 "
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url('https://a0.muscache.com/pictures/85598100-3455-42a9-b657-d09e3a869edc.jpg');
                                                   background-size: cover;
@@ -664,7 +664,7 @@
                                                 "
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url('https://a0.muscache.com/pictures/537bb7ad-65be-4e14-9686-f6d1e0422a8c.jpg');
                                                   background-size: cover;
@@ -743,7 +743,7 @@
                                                 "
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url('https://a0.muscache.com/pictures/f438b2fb-c829-4596-a7e6-d81467780d4a.jpg');
                                                   background-size: cover;
@@ -903,7 +903,7 @@
                                   data-original-uri="https://a0.muscache.com/pictures/d531f23c-d288-4a0c-9074-d0a2886e6b1b.jpg"
                                 />
                                 <div
-                                  class="_15p4g025"
+                                  class="background__img-position-center"
                                   style="
                                     background-image: url('https://a0.muscache.com/pictures/d531f23c-d288-4a0c-9074-d0a2886e6b1b.jpg');
                                     background-size: cover;
@@ -1101,7 +1101,7 @@
                                   data-original-uri="https://a0.muscache.com/pictures/dae1adc2-79c6-495c-ab64-a9e37e3a4279.jpg"
                                 />
                                 <div
-                                  class="_15p4g025"
+                                  class="background__img-position-center"
                                   style="
                                     background-image: url('https://a0.muscache.com/pictures/dae1adc2-79c6-495c-ab64-a9e37e3a4279.jpg');
                                     background-size: cover;
@@ -1298,7 +1298,7 @@
                                   data-original-uri="https://a0.muscache.com/pictures/57d8d685-d26c-4e3a-bb72-abf3cf68cd56.jpg"
                                 />
                                 <div
-                                  class="_15p4g025"
+                                  class="background__img-position-center"
                                   style="
                                     background-image: url('https://a0.muscache.com/pictures/57d8d685-d26c-4e3a-bb72-abf3cf68cd56.jpg');
                                     background-size: cover;
@@ -2159,14 +2159,14 @@
                       </section>
                     </div>
                     <div class="footer__copyright">
-                      <span class="text__highlight dir dir-ltr">Footer section</span>
+                      <span class="text_highlight dir dir-ltr">Footer section</span>
                       <section>
                         <div class="_1udzt2s">
                           <div class="_p03egf">
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -2189,7 +2189,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
@@ -2229,7 +2229,7 @@
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -2252,7 +2252,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
@@ -2399,7 +2399,7 @@
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -2422,7 +2422,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
