--- a/dashboard.html
+++ b/dashboard.html
@@ -1776,7 +1776,7 @@
       .dir-rtl.atm_gz_1y44olf.atm_gz_1y44olf {
         margin-right: 4px;
       }
-      .text__highlight[class][class] {
+      .text_highlight[class][class] {
         -webkit-clip: rect(0 0 0 0);
         clip: rect(0 0 0 0);
         -webkit-clip-path: inset(100%);
@@ -1788,7 +1788,7 @@
         white-space: nowrap;
         width: 1px;
       }
-      .dir.text__highlight[class][class] {
+      .dir.text_highlight[class][class] {
         border: 0;
         padding: 0;
       }
@@ -2359,7 +2359,7 @@
                               <div class="flex-item">
                                 <div></div>
                               </div></div></span
-                          ><span class="text__highlight dir dir-ltr"
+                          ><span class="text_highlight dir dir-ltr"
                             >Experience hosting dashboard</span
                           >
                         </button>
@@ -2883,7 +2883,7 @@
                                     "
                                   />
                                   <div
-                                    class="_15p4g025"
+                                    class="background__img-position-center"
                                     style="
                                       background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large');
                                       background-size: cover;
@@ -3091,7 +3091,7 @@
                                   "
                                 />
                                 <div
-                                  class="_15p4g025"
+                                  class="background__img-position-center"
                                   style="
                                     background-image: url('https://a0.muscache.com/pictures/3dd9a331-8a70-45f2-ac11-27a1e8115aca.jpg');
                                     background-size: cover;
@@ -3282,14 +3282,14 @@
                     </section>
                   </div>
                   <div class="footer__copyright">
-                    <span class="text__highlight dir dir-ltr">Footer section</span>
+                    <span class="text_highlight dir dir-ltr">Footer section</span>
                     <section>
                       <div class="_1udzt2s">
                         <div class="_p03egf">
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -3312,7 +3312,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
@@ -3350,7 +3350,7 @@
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -3373,7 +3373,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
@@ -3520,7 +3520,7 @@
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -3543,7 +3543,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
