--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -762,7 +762,7 @@
                                             >
                                               Light<span
                                                 aria-hidden="true"
-                                                class="_1vwho579"
+                                                class="button__hidden-text"
                                                 >Light</span
                                               ></button
                                             ><button
@@ -774,7 +774,7 @@
                                             >
                                               Moderate<span
                                                 aria-hidden="true"
-                                                class="_1vwho579"
+                                                class="button__hidden-text"
                                                 >Moderate</span
                                               ></button
                                             ><button
@@ -786,7 +786,7 @@
                                             >
                                               Strenuous<span
                                                 aria-hidden="true"
-                                                class="_1vwho579"
+                                                class="button__hidden-text"
                                                 >Strenuous</span
                                               ></button
                                             ><button
@@ -798,7 +798,7 @@
                                             >
                                               Extreme<span
                                                 aria-hidden="true"
-                                                class="_1vwho579"
+                                                class="button__hidden-text"
                                                 >Extreme</span
                                               >
                                             </button>
@@ -842,7 +842,7 @@
                                             >
                                               Beginner<span
                                                 aria-hidden="true"
-                                                class="_1vwho579"
+                                                class="button__hidden-text"
                                                 >Beginner</span
                                               ></button
                                             ><button
@@ -854,7 +854,7 @@
                                             >
                                               Intermediate<span
                                                 aria-hidden="true"
-                                                class="_1vwho579"
+                                                class="button__hidden-text"
                                                 >Intermediate</span
                                               ></button
                                             ><button
@@ -866,7 +866,7 @@
                                             >
                                               Advanced<span
                                                 aria-hidden="true"
-                                                class="_1vwho579"
+                                                class="button__hidden-text"
                                                 >Advanced</span
                                               ></button
                                             ><button
@@ -878,7 +878,7 @@
                                             >
                                               Expert<span
                                                 aria-hidden="true"
-                                                class="_1vwho579"
+                                                class="button__hidden-text"
                                                 >Expert</span
                                               >
                                             </button>
@@ -935,7 +935,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             <span aria-hidden="true"
                                               >62/850</span
                                             ><span
-                                              class="text__highlight dir dir-ltr"
+                                              class="text_highlight dir dir-ltr"
                                               aria-atomic="true"
                                               aria-live="polite"
                                               >62 out of 850 characters
