--- a/edit/photos.html
+++ b/edit/photos.html
@@ -530,7 +530,7 @@
                                                           "
                                                       /></picture>
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?im_w=720');
                                                           background-size: cover;
@@ -724,7 +724,7 @@
                                                           "
                                                       /></picture>
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/0a76a514-862e-4d55-bb45-cd0d9fccba05.jpeg?im_w=720');
                                                           background-size: cover;
@@ -855,7 +855,7 @@
                                                           "
                                                       /></picture>
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/dca15e8a-6a92-4291-b033-2d942514e8d9.jpeg?im_w=720');
                                                           background-size: cover;
@@ -986,7 +986,7 @@
                                                           "
                                                       /></picture>
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/ac50c0cc-db0d-4290-88d6-a70fe4e1a98c.jpeg?im_w=720');
                                                           background-size: cover;
@@ -1117,7 +1117,7 @@
                                                           "
                                                       /></picture>
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/2afdc438-6805-42c6-829c-446b72dff354.jpeg?im_w=720');
                                                           background-size: cover;
@@ -1248,7 +1248,7 @@
                                                           "
                                                       /></picture>
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c0565b77-ef6e-4d80-9907-4174f321077a.jpeg?im_w=720');
                                                           background-size: cover;
@@ -1379,7 +1379,7 @@
                                                           "
                                                       /></picture>
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/8a4ad4a4-1068-45f4-808d-5827b7498dc0.jpeg?im_w=720');
                                                           background-size: cover;
@@ -1510,7 +1510,7 @@
                                                           "
                                                       /></picture>
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/5906f2ff-74de-4e8d-a348-f4dd43f1b247.jpeg?im_w=720');
                                                           background-size: cover;
@@ -1641,7 +1641,7 @@
                                                           "
                                                       /></picture>
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/a894db2d-87a7-4f04-8204-3dd95167478a.jpeg?im_w=720');
                                                           background-size: cover;
@@ -1825,7 +1825,7 @@
                                               "
                                           /></picture>
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/0a76a514-862e-4d55-bb45-cd0d9fccba05.jpeg?im_w=720');
                                               background-size: cover;
@@ -1884,7 +1884,7 @@
                                               "
                                           /></picture>
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/dca15e8a-6a92-4291-b033-2d942514e8d9.jpeg?im_w=720');
                                               background-size: cover;
@@ -1943,7 +1943,7 @@
                                               "
                                           /></picture>
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/ac50c0cc-db0d-4290-88d6-a70fe4e1a98c.jpeg?im_w=720');
                                               background-size: cover;
@@ -2002,7 +2002,7 @@
                                               "
                                           /></picture>
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/2afdc438-6805-42c6-829c-446b72dff354.jpeg?im_w=720');
                                               background-size: cover;
@@ -2061,7 +2061,7 @@
                                               "
                                           /></picture>
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c0565b77-ef6e-4d80-9907-4174f321077a.jpeg?im_w=720');
                                               background-size: cover;
@@ -2120,7 +2120,7 @@
                                               "
                                           /></picture>
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/8a4ad4a4-1068-45f4-808d-5827b7498dc0.jpeg?im_w=720');
                                               background-size: cover;
@@ -2179,7 +2179,7 @@
                                               "
                                           /></picture>
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/5906f2ff-74de-4e8d-a348-f4dd43f1b247.jpeg?im_w=720');
                                               background-size: cover;
