--- a/edit/what.html
+++ b/edit/what.html
@@ -448,7 +448,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             <span aria-hidden="true"
                                               >519/1400</span
                                             ><span
-                                              class="text__highlight dir dir-ltr"
+                                              class="text_highlight dir dir-ltr"
                                               aria-atomic="true"
                                               aria-live="polite"
                                               >519 out of 1400 characters
@@ -737,7 +737,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                       aria-labelledby="ONLINE_QUESTION-1-radio-row-row-title"
                                                       aria-describedby="ONLINE_QUESTION-1-radio-row-row-subtitle"
                                                       id="ONLINE_QUESTION-1-radio-row-row-radio-button"
-                                                      class="_83s1a2"
+                                                      class="radio__button"
                                                       type="radio"
                                                       value="1"
                                                     />
