--- a/experienceType.html
+++ b/experienceType.html
@@ -735,7 +735,7 @@
       .dir-rtl.atm_gz_1y44olf.atm_gz_1y44olf {
         margin-right: 4px;
       }
-      .text__highlight[class][class] {
+      .text_highlight[class][class] {
         -webkit-clip: rect(0 0 0 0);
         clip: rect(0 0 0 0);
         -webkit-clip-path: inset(100%);
@@ -747,7 +747,7 @@
         white-space: nowrap;
         width: 1px;
       }
-      .dir.text__highlight[class][class] {
+      .dir.text_highlight[class][class] {
         border: 0;
         padding: 0;
       }
@@ -2161,19 +2161,19 @@
         padding-bottom: var(--jhzm-v-t);
         box-shadow: rgb(0 0 0 / 16%) 0 0 6px;
       }
-      .plmw1e5[class][class] {
+      .margin__auto-x[class][class] {
         height: 100%;
         width: 100%;
       }
-      .dir-ltr.plmw1e5[class][class] {
+      .dir-ltr.margin__auto-x[class][class] {
         margin-left: auto;
         margin-right: auto;
       }
-      .dir-rtl.plmw1e5[class][class] {
+      .dir-rtl.margin__auto-x[class][class] {
         margin-right: auto;
         margin-left: auto;
       }
-      .mq5rv0q[class][class] {
+      .max__width[class][class] {
         max-width: var(--gp-section-max-width, var(--maxWidth));
       }
       .s1e5vr6n[class][class] {
