--- a/experiences.html
+++ b/experiences.html
@@ -2124,7 +2124,7 @@
       .dir-rtl.atm_gz_1y44olf.atm_gz_1y44olf {
         margin-right: 4px;
       }
-      .text__highlight[class][class] {
+      .text_highlight[class][class] {
         -webkit-clip: rect(0 0 0 0);
         clip: rect(0 0 0 0);
         -webkit-clip-path: inset(100%);
@@ -2136,7 +2136,7 @@
         white-space: nowrap;
         width: 1px;
       }
-      .dir.text__highlight[class][class] {
+      .dir.text_highlight[class][class] {
         border: 0;
         padding: 0;
       }
@@ -2914,19 +2914,19 @@
         padding-bottom: var(--jhzm-v-t);
         box-shadow: rgb(0 0 0 / 16%) 0 0 6px;
       }
-      .plmw1e5[class][class] {
+      .margin__auto-x[class][class] {
         height: 100%;
         width: 100%;
       }
-      .dir-ltr.plmw1e5[class][class] {
+      .dir-ltr.margin__auto-x[class][class] {
         margin-left: auto;
         margin-right: auto;
       }
-      .dir-rtl.plmw1e5[class][class] {
+      .dir-rtl.margin__auto-x[class][class] {
         margin-right: auto;
         margin-left: auto;
       }
-      .mq5rv0q[class][class] {
+      .max__width[class][class] {
         max-width: var(--gp-section-max-width, var(--maxWidth));
       }
       .s1e5vr6n[class][class] {
@@ -4010,7 +4010,7 @@
                               <div class="flex-item">
                                 <div></div>
                               </div></div></span
-                          ><span class="text__highlight dir dir-ltr"
+                          ><span class="text_highlight dir dir-ltr"
                             >Experience hosting dashboard</span
                           >
                         </button>
@@ -4126,7 +4126,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                              class="margin__auto-x max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -4189,7 +4189,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                              class="margin__auto-x max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -4256,7 +4256,7 @@
                                             "
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=large');
                                               background-size: cover;
@@ -4345,7 +4345,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                              class="margin__auto-x max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -4453,7 +4453,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                              class="margin__auto-x max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -4557,7 +4557,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                              class="margin__auto-x max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -4661,7 +4661,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                              class="margin__auto-x max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div
@@ -4905,14 +4905,14 @@
                     </section>
                   </div>
                   <div class="footer__copyright">
-                    <span class="text__highlight dir dir-ltr">Footer section</span>
+                    <span class="text_highlight dir dir-ltr">Footer section</span>
                     <section>
                       <div class="_1udzt2s">
                         <div class="_p03egf">
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -4935,7 +4935,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
@@ -4973,7 +4973,7 @@
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -4996,7 +4996,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
@@ -5143,7 +5143,7 @@
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -5166,7 +5166,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
