--- a/explore-where.html
+++ b/explore-where.html
@@ -532,7 +532,7 @@
                                                       id="destinationChipsSectionID-DLS-chipGroup-label"
                                                     >
                                                       <span
-                                                        class="text__highlight dir dir-ltr"
+                                                        class="text_highlight dir dir-ltr"
                                                         >Search by region</span
                                                       >
                                                     </div>
@@ -560,7 +560,7 @@
                                                               class="ioa2q3t dir dir-ltr"
                                                             ></div>
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >I’m
                                                               flexible</span
                                                             ><span
@@ -605,7 +605,7 @@
                                                               class="ioa2q3t dir dir-ltr"
                                                             ></div>
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Europe</span
                                                             ><span
                                                               aria-hidden="true"
@@ -649,7 +649,7 @@
                                                               class="ioa2q3t dir dir-ltr"
                                                             ></div>
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Spain</span
                                                             ><span
                                                               aria-hidden="true"
@@ -693,7 +693,7 @@
                                                               class="ioa2q3t dir dir-ltr"
                                                             ></div>
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >United
                                                               States</span
                                                             ><span
@@ -738,7 +738,7 @@
                                                               class="ioa2q3t dir dir-ltr"
                                                             ></div>
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >France</span
                                                             ><span
                                                               aria-hidden="true"
@@ -782,7 +782,7 @@
                                                               class="ioa2q3t dir dir-ltr"
                                                             ></div>
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Italy</span
                                                             ><span
                                                               aria-hidden="true"
@@ -826,7 +826,7 @@
                                                               class="ioa2q3t dir dir-ltr"
                                                             ></div>
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Australia</span
                                                             ><span
                                                               aria-hidden="true"
@@ -870,7 +870,7 @@
                                                               class="ioa2q3t dir dir-ltr"
                                                             ></div>
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >United
                                                               Kingdom</span
                                                             ><span
@@ -915,7 +915,7 @@
                                                               class="ioa2q3t dir dir-ltr"
                                                             ></div>
                                                             <span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Canada</span
                                                             ><span
                                                               aria-hidden="true"
