--- a/gift.html
+++ b/gift.html
@@ -218,7 +218,7 @@
                                       data-original-uri="https://a0.muscache.com/pictures/09104ce1-4a66-4284-80b2-ad0ea3e46c24.jpg"
                                     />
                                     <div
-                                      class="_15p4g025"
+                                      class="background__img-position-center"
                                       style="
                                         background-image: url(https://a0.muscache.com/pictures/09104ce1-4a66-4284-80b2-ad0ea3e46c24.jpg);
                                         background-size: cover;
@@ -385,7 +385,7 @@
                                   data-original-uri="https://a0.muscache.com/pictures/09104ce1-4a66-4284-80b2-ad0ea3e46c24.jpg"
                                 />
                                 <div
-                                  class="_15p4g025"
+                                  class="background__img-position-center"
                                   style="
                                     background-image: url(https://a0.muscache.com/pictures/09104ce1-4a66-4284-80b2-ad0ea3e46c24.jpg);
                                     background-size: cover;
@@ -894,14 +894,14 @@
                         </section>
                       </div>
                       <div class="footer__copyright">
-                        <span class="text__highlight dir dir-ltr">Footer section</span>
+                        <span class="text_highlight dir dir-ltr">Footer section</span>
                         <section>
                           <div class="_1udzt2s">
                             <div class="_p03egf">
                               <div class="flex">
                                 <span class="_19c5bku"
                                   ><button type="button" class="_f2hxk3s">
-                                    <span class="text__highlight dir dir-ltr"
+                                    <span class="text_highlight dir dir-ltr"
                                       >Choose a language</span
                                     ><span class="_14tkmhr"
                                       ><svg
@@ -924,7 +924,7 @@
                                   </button></span
                                 ><span class="_19c5bku"
                                   ><button type="button" class="_f2hxk3s">
-                                    <span class="text__highlight dir dir-ltr"
+                                    <span class="text_highlight dir dir-ltr"
                                       >Choose a currency</span
                                     ><span class="_14tkmhr"
                                       ><span class="_pgfqnw">₱</span></span
@@ -965,7 +965,7 @@
                               <div class="flex">
                                 <span class="_19c5bku"
                                   ><button type="button" class="_f2hxk3s">
-                                    <span class="text__highlight dir dir-ltr"
+                                    <span class="text_highlight dir dir-ltr"
                                       >Choose a language</span
                                     ><span class="_14tkmhr"
                                       ><svg
@@ -988,7 +988,7 @@
                                   </button></span
                                 ><span class="_19c5bku"
                                   ><button type="button" class="_f2hxk3s">
-                                    <span class="text__highlight dir dir-ltr"
+                                    <span class="text_highlight dir dir-ltr"
                                       >Choose a currency</span
                                     ><span class="_14tkmhr"
                                       ><span class="_pgfqnw">₱</span></span
@@ -1136,7 +1136,7 @@
                               <div class="flex">
                                 <span class="_19c5bku"
                                   ><button type="button" class="_f2hxk3s">
-                                    <span class="text__highlight dir dir-ltr"
+                                    <span class="text_highlight dir dir-ltr"
                                       >Choose a language</span
                                     ><span class="_14tkmhr"
                                       ><svg
@@ -1159,7 +1159,7 @@
                                   </button></span
                                 ><span class="_19c5bku"
                                   ><button type="button" class="_f2hxk3s">
-                                    <span class="text__highlight dir dir-ltr"
+                                    <span class="text_highlight dir dir-ltr"
                                       >Choose a currency</span
                                     ><span class="_14tkmhr"
                                       ><span class="_pgfqnw">₱</span></span
