--- a/insights.html
+++ b/insights.html
@@ -71,7 +71,7 @@
                               <div class="flex-item">
                                 <div></div>
                               </div></div></span
-                          ><span class="text__highlight dir dir-ltr"
+                          ><span class="text_highlight dir dir-ltr"
                             >Experience hosting dashboard</span
                           >
                         </button>
@@ -177,7 +177,7 @@
                       <div style="--gp-section-max-width: 1120px">
                         <div class="section-container">
                           <div
-                            class="plmw1e5 mq5rv0q dir dir-ltr"
+                            class="margin__auto-x max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -209,7 +209,7 @@
                       <div style="--gp-section-max-width: 1120px">
                         <div class="section-container">
                           <div
-                            class="plmw1e5 mq5rv0q dir dir-ltr"
+                            class="margin__auto-x max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -228,7 +228,7 @@
                                     class="dir dir-ltr"
                                     id="filter-menu-chip-group-DLS-chipGroup-label"
                                   >
-                                    <span class="text__highlight dir dir-ltr"
+                                    <span class="text_highlight dir dir-ltr"
                                       >filters</span
                                     >
                                   </div>
@@ -250,7 +250,7 @@
                                 </div>
                                 <span aria-hidden="true"
                                   ><span
-                                    class="text__highlight dir dir-ltr"
+                                    class="text_highlight dir dir-ltr"
                                     id="experience-filter-describedby"
                                     >Experience name. Select to access insights
                                     for a different experience.</span
@@ -1376,7 +1376,7 @@
                       <div style="--gp-section-max-width: 1120px">
                         <div class="section-container">
                           <div
-                            class="plmw1e5 mq5rv0q dir dir-ltr"
+                            class="margin__auto-x max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -1399,7 +1399,7 @@
                                     <label
                                       class="form-floating__control"
                                       for="EXPERIENCES_HOST_INSIGHTS_HEADING_SELECT-select"
-                                      ><span class="text__highlight dir dir-ltr"
+                                      ><span class="text_highlight dir dir-ltr"
                                         >Review range</span
                                       >
                                       <div class="box-border">
@@ -1456,7 +1456,7 @@
                         >
                           <div class="section-container">
                             <div
-                              class="plmw1e5 mq5rv0q dir dir-ltr"
+                              class="margin__auto-x max__width dir dir-ltr"
                               style="--maxWidth: 1120px"
                             >
                               <div>
@@ -1499,7 +1499,7 @@
                                   <a
                                     href="/experience-hosting/performance?modal=expertise"
                                     class="_1sikdxcl"
-                                    ><span class="text__highlight dir dir-ltr"
+                                    ><span class="text_highlight dir dir-ltr"
                                       >Expertise</span
                                     >
                                     Details</a
@@ -1530,7 +1530,7 @@
                                   <a
                                     href="/experience-hosting/performance?modal=access"
                                     class="_1sikdxcl"
-                                    ><span class="text__highlight dir dir-ltr"
+                                    ><span class="text_highlight dir dir-ltr"
                                       >Insider access</span
                                     >
                                     Details</a
@@ -1561,7 +1561,7 @@
                                   <a
                                     href="/experience-hosting/performance?modal=connection"
                                     class="_1sikdxcl"
-                                    ><span class="text__highlight dir dir-ltr"
+                                    ><span class="text_highlight dir dir-ltr"
                                       >Connection</span
                                     >
                                     Details</a
@@ -1577,7 +1577,7 @@
                       <div style="--gp-section-max-width: 1120px">
                         <div class="section-container">
                           <div
-                            class="plmw1e5 mq5rv0q dir dir-ltr"
+                            class="margin__auto-x max__width dir dir-ltr"
                             style="--maxWidth: 1120px"
                           >
                             <div
@@ -1620,7 +1620,7 @@
                                                 ·</span
                                               >
                                               Overall<span
-                                                class="text__highlight dir dir-ltr"
+                                                class="text_highlight dir dir-ltr"
                                                 >This issue was noted once by
                                                 guests</span
                                               >
@@ -1628,7 +1628,7 @@
                                           </div>
                                           <span
                                             aria-hidden="true"
-                                            class="_1vwho579"
+                                            class="button__hidden-text"
                                             ><div class="_h3y4zy">
                                               <div>
                                                 <span class="_1sz6tyi">1x</span
@@ -1636,7 +1636,7 @@
                                                   ·</span
                                                 >
                                                 Overall<span
-                                                  class="text__highlight dir dir-ltr"
+                                                  class="text_highlight dir dir-ltr"
                                                   >This issue was noted once by
                                                   guests</span
                                                 >
@@ -1654,7 +1654,7 @@
                                                 ·</span
                                               >
                                               Price was lower elsewhere<span
-                                                class="text__highlight dir dir-ltr"
+                                                class="text_highlight dir dir-ltr"
                                                 >This issue was noted once by
                                                 guests</span
                                               >
@@ -1662,7 +1662,7 @@
                                           </div>
                                           <span
                                             aria-hidden="true"
-                                            class="_1vwho579"
+                                            class="button__hidden-text"
                                             ><div class="_h3y4zy">
                                               <div>
                                                 <span class="_1sz6tyi">1x</span
@@ -1670,7 +1670,7 @@
                                                   ·</span
                                                 >
                                                 Price was lower elsewhere<span
-                                                  class="text__highlight dir dir-ltr"
+                                                  class="text_highlight dir dir-ltr"
                                                   >This issue was noted once by
                                                   guests</span
                                                 >
@@ -1840,14 +1840,14 @@
                     </section>
                   </div>
                   <div class="footer__copyright">
-                    <span class="text__highlight dir dir-ltr">Footer section</span>
+                    <span class="text_highlight dir dir-ltr">Footer section</span>
                     <section>
                       <div class="_1udzt2s">
                         <div class="_p03egf">
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -1870,7 +1870,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
@@ -1908,7 +1908,7 @@
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 ><span class="_14tkmhr"
                                   ><svg
@@ -1931,7 +1931,7 @@
                               </button></span
                             ><span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
@@ -2082,7 +2082,7 @@
                           <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a language</span
                                 >
                                 <span class="_14tkmhr"
@@ -2109,7 +2109,7 @@
                             >
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="_14tkmhr"
                                   ><span class="_pgfqnw">₱</span></span
