--- a/payment.html
+++ b/payment.html
@@ -99,7 +99,7 @@
                                     <div style="--gp-section-max-width: 1120px">
                                       <div class="section-container">
                                         <div
-                                          class="plmw1e5 mq5rv0q dir dir-ltr"
+                                          class="margin__auto-x max__width dir dir-ltr"
                                           style="--maxWidth: 1120px"
                                         >
                                           <div
@@ -443,7 +443,7 @@
                                               <fieldset class="_1rshn0">
                                                 <legend class="_1gyjybc">
                                                   <span
-                                                    class="text__highlight dir dir-ltr"
+                                                    class="text_highlight dir dir-ltr"
                                                     >Payment plan</span
                                                   >
                                                 </legend>
@@ -657,7 +657,7 @@
                                                             </div>
                                                           </div>
                                                           <span
-                                                            class="text__highlight dir dir-ltr"
+                                                            class="text_highlight dir dir-ltr"
                                                             id="payment_option_selector_described_by"
                                                             >Select or add a new
                                                             payment method</span
@@ -1059,7 +1059,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/im/pictures/c4de38fa-9a1d-48ec-a2ff-58b4cf2c1323.jpg?aki_policy=large');
                                                           background-size: cover;
@@ -1086,7 +1086,7 @@
                                                           <span
                                                             class="_154iz1b2"
                                                             ><span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Rating 5.0 out of
                                                               5; 70
                                                               reviews</span
@@ -1114,7 +1114,7 @@
                                                               aria-hidden="true"
                                                               >5.0</span
                                                             ><span
-                                                              class="_a7a5sx"
+                                                              class="text__color-gray"
                                                               aria-hidden="true"
                                                               >&nbsp;(70
                                                               reviews)</span
@@ -1125,7 +1125,7 @@
                                                           <span
                                                             class="_154iz1b2"
                                                             ><span
-                                                              class="text__highlight dir dir-ltr"
+                                                              class="text_highlight dir dir-ltr"
                                                               >Rating 5.0 out of
                                                               5; 70
                                                               reviews</span
@@ -1153,7 +1153,7 @@
                                                               aria-hidden="true"
                                                               >5.0</span
                                                             ><span
-                                                              class="_a7a5sx"
+                                                              class="text__color-gray"
                                                               aria-hidden="true"
                                                               >&nbsp;(70)</span
                                                             ></span
@@ -1161,7 +1161,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="flex-items-center">
-                                                        <span class="_a7a5sx"
+                                                        <span class="text__color-gray"
                                                           >•</span
                                                         ><span class="_15nqexk"
                                                           ><svg
@@ -1376,7 +1376,7 @@
                               <footer role="contentinfo" class="footer">
                                 <div class="footer__container">
                                   <div class="_157uib4">
-                                    <span class="text__highlight dir dir-ltr"
+                                    <span class="text_highlight dir dir-ltr"
                                       >Footer section</span
                                     >
                                     <section>
@@ -1389,7 +1389,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text__highlight dir dir-ltr"
+                                                  class="text_highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span class="_14tkmhr"
                                                   ><svg
@@ -1418,7 +1418,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text__highlight dir dir-ltr"
+                                                  class="text_highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="_14tkmhr"
                                                   ><span class="_pgfqnw"
@@ -1481,7 +1481,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text__highlight dir dir-ltr"
+                                                  class="text_highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span class="_14tkmhr"
                                                   ><svg
@@ -1510,7 +1510,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text__highlight dir dir-ltr"
+                                                  class="text_highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="_14tkmhr"
                                                   ><span class="_pgfqnw"
@@ -1697,7 +1697,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text__highlight dir dir-ltr"
+                                                  class="text_highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span class="_14tkmhr"
                                                   ><svg
@@ -1726,7 +1726,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="text__highlight dir dir-ltr"
+                                                  class="text_highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="_14tkmhr"
                                                   ><span class="_pgfqnw"
