--- a/profile.html
+++ b/profile.html
@@ -415,7 +415,7 @@
                                                 "
                                               />
                                               <div
-                                                class="_15p4g025"
+                                                class="background__img-position-center"
                                                 style="
                                                   background-image: url('https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_large');
                                                   background-size: cover;
@@ -629,7 +629,7 @@
                                                     "
                                                   />
                                                   <div
-                                                    class="_15p4g025"
+                                                    class="background__img-position-center"
                                                     style="
                                                       background-image: url('https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_large');
                                                       background-size: cover;
@@ -1486,7 +1486,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                             "
                                                           />
                                                           <div
-                                                            class="_15p4g025"
+                                                            class="background__img-position-center"
                                                             style="
                                                               background-image: url('https://a0.muscache.com/defaults/user_pic-225x225.png?v=3');
                                                               background-size: cover;
@@ -1567,7 +1567,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           data-original-uri="https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_large"
                                         />
                                         <div
-                                          class="_15p4g025"
+                                          class="background__img-position-center"
                                           style="
                                             background-image: url(https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_large);
                                             background-size: cover;
@@ -1782,7 +1782,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               data-original-uri="https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_large"
                                             />
                                             <div
-                                              class="_15p4g025"
+                                              class="background__img-position-center"
                                               style="
                                                 background-image: url(https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_large);
                                                 background-size: cover;
@@ -2635,7 +2635,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                       "
                                                     />
                                                     <div
-                                                      class="_15p4g025"
+                                                      class="background__img-position-center"
                                                       style="
                                                         background-image: url('https://a0.muscache.com/defaults/user_pic-225x225.png?v=3');
                                                         background-size: cover;
@@ -2834,7 +2834,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text__highlight dir dir-ltr"
+                          <span class="text_highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -2843,7 +2843,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -2868,7 +2868,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -2909,7 +2909,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -2934,7 +2934,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -3090,7 +3090,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -3115,7 +3115,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
