--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -445,7 +445,7 @@
                               "
                             />
                             <div
-                              class="_15p4g025"
+                              class="background__img-position-center"
                               style="
                                 background-image: url('https://a0.muscache.com/im/users/25152659/profile_pic/1423833182/original.jpg?aki_policy=profile_x_medium');
                                 background-size: cover;
