--- a/resources.html
+++ b/resources.html
@@ -71,7 +71,7 @@
                                 class="_1mt76m69"
                                 ><span class="_1yy2pf1"
                                   >Resource Center<span
-                                    class="text__highlight dir dir-ltr"
+                                    class="text_highlight dir dir-ltr"
                                     >home page</span
                                   ></span
                                 ></a
@@ -1086,7 +1086,7 @@
                                     </ul>
                                   </div>
                                   <div class="gallery-lg">
-                                    <div class="_h69t7tv">
+                                    <div class="hidden__md">
                                       <div class="_1hytef3">
                                         <div class="vh-100">
                                           <div class="relative">
@@ -4063,7 +4063,7 @@
                                             data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt699d07f00c5228d5/624cb04f7d552701c636663c/seo_article_1_image_redo.jpg"
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url(https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt699d07f00c5228d5/624cb04f7d552701c636663c/seo_article_1_image_redo.jpg);
                                               background-size: cover;
@@ -4150,7 +4150,7 @@
                                             data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt716e4e911e4bca34/60b660361ea8cc0cc03a21fd/who-books-experiences.jpeg"
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url(https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt716e4e911e4bca34/60b660361ea8cc0cc03a21fd/who-books-experiences.jpeg);
                                               background-size: cover;
@@ -4259,7 +4259,7 @@
                                             data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt56450da192009b3f/60ae2d74ee8f7048b41abb77/howtobuildafivestar.jpg"
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url(https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt56450da192009b3f/60ae2d74ee8f7048b41abb77/howtobuildafivestar.jpg);
                                               background-size: cover;
@@ -4346,7 +4346,7 @@
                                             data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt01ac6d09f24b90f3/6195a4c62dc01977975bae90/private_link_sharing.jpeg"
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url(https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt01ac6d09f24b90f3/6195a4c62dc01977975bae90/private_link_sharing.jpeg);
                                               background-size: cover;
@@ -4433,7 +4433,7 @@
                                             data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt3dfb7208a36a19c7/617afb13515a341061cc7138/flexible_cancellation_policies.jpg?crop=66.66p,100p,x0,y0&amp;width=450&amp;height=450&amp;auto=webp"
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url(https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/blt3dfb7208a36a19c7/617afb13515a341061cc7138/flexible_cancellation_policies.jpg?crop=66.66p,100p,x0,y0&amp;width=450&amp;height=450&amp;auto=webp);
                                               background-size: cover;
@@ -4520,7 +4520,7 @@
                                             data-original-uri="https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltcfaff64ca4d38fae/60a6fbd2eab8ca74ace8537c/purple-belo-illustrated-2.png"
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url(https://images.contentstack.io/v3/assets/bltb428ce5d46f8efd8/bltcfaff64ca4d38fae/60a6fbd2eab8ca74ace8537c/purple-belo-illustrated-2.png);
                                               background-size: cover;
@@ -5368,14 +5368,14 @@
                       </section>
                     </div>
                     <div class="footer__copyright">
-                      <span class="text__highlight dir dir-ltr">Footer section</span>
+                      <span class="text_highlight dir dir-ltr">Footer section</span>
                       <section>
                         <div class="_1udzt2s">
                           <div class="_p03egf">
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -5398,7 +5398,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
@@ -5438,7 +5438,7 @@
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -5461,7 +5461,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
@@ -5608,7 +5608,7 @@
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -5631,7 +5631,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="text__highlight dir dir-ltr"
+                                  <span class="text_highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
