--- a/reviews.html
+++ b/reviews.html
@@ -65,14 +65,14 @@
                         </div>
                       </div>
                       <div class="_1mejhadq" data-testid="children">
-                        <span class="text__highlight dir dir-ltr" tabindex="-1"
+                        <span class="text_highlight dir dir-ltr" tabindex="-1"
                           >Step 1</span
                         >
                       </div>
                       <div class="_1as7kh5l" data-testid="after">
                         <div class="_4gelgl">
                           <div class="_14f4nnk hidden d-md-inline-block">
-                            <div class="_h69t7tv">
+                            <div class="hidden__md">
                               <span class="_10rf6ea"
                                 >Last saved a few seconds ago</span
                               >
@@ -360,7 +360,7 @@
                                 </section>
                               </div>
                               <div>
-                                <span class="text__highlight dir dir-ltr"></span>
+                                <span class="text_highlight dir dir-ltr"></span>
                                 <div class="_1xykmvt">
                                   <div class="_1udzt2s hidden-md">
                                     <div
@@ -401,7 +401,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv hidden block-md">
+                                  <div class="hidden__md hidden block-md">
                                     <div
                                       id="expectations_option_very_high"
                                       aria-disabled="false"
@@ -472,7 +472,7 @@
                                               aria-labelledby="expectations_option_high-row-title"
                                               aria-describedby="expectations_option_high-row-subtitle"
                                               id="expectations_option_high-row-radio-button"
-                                              class="_83s1a2"
+                                              class="radio__button"
                                               type="radio"
                                               value="4"
                                             />
@@ -480,7 +480,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv hidden block-md">
+                                  <div class="hidden__md hidden block-md">
                                     <div
                                       id="expectations_option_high"
                                       aria-disabled="false"
@@ -496,7 +496,7 @@
                                               aria-labelledby="expectations_option_high-row-title"
                                               aria-describedby="expectations_option_high-row-subtitle"
                                               id="expectations_option_high-row-radio-button"
-                                              class="_83s1a2"
+                                              class="radio__button"
                                               type="radio"
                                               value="4"
                                             />
@@ -551,7 +551,7 @@
                                               aria-labelledby="expectations_option_neutral-row-title"
                                               aria-describedby="expectations_option_neutral-row-subtitle"
                                               id="expectations_option_neutral-row-radio-button"
-                                              class="_83s1a2"
+                                              class="radio__button"
                                               type="radio"
                                               value="3"
                                             />
@@ -559,7 +559,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv hidden block-md">
+                                  <div class="hidden__md hidden block-md">
                                     <div
                                       id="expectations_option_neutral"
                                       aria-disabled="false"
@@ -575,7 +575,7 @@
                                               aria-labelledby="expectations_option_neutral-row-title"
                                               aria-describedby="expectations_option_neutral-row-subtitle"
                                               id="expectations_option_neutral-row-radio-button"
-                                              class="_83s1a2"
+                                              class="radio__button"
                                               type="radio"
                                               value="3"
                                             />
@@ -630,7 +630,7 @@
                                               aria-labelledby="expectations_option_low-row-title"
                                               aria-describedby="expectations_option_low-row-subtitle"
                                               id="expectations_option_low-row-radio-button"
-                                              class="_83s1a2"
+                                              class="radio__button"
                                               type="radio"
                                               value="2"
                                             />
@@ -638,7 +638,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv hidden block-md">
+                                  <div class="hidden__md hidden block-md">
                                     <div
                                       id="expectations_option_low"
                                       aria-disabled="false"
@@ -654,7 +654,7 @@
                                               aria-labelledby="expectations_option_low-row-title"
                                               aria-describedby="expectations_option_low-row-subtitle"
                                               id="expectations_option_low-row-radio-button"
-                                              class="_83s1a2"
+                                              class="radio__button"
                                               type="radio"
                                               value="2"
                                             />
@@ -709,7 +709,7 @@
                                               aria-labelledby="expectations_option_very_low-row-title"
                                               aria-describedby="expectations_option_very_low-row-subtitle"
                                               id="expectations_option_very_low-row-radio-button"
-                                              class="_83s1a2"
+                                              class="radio__button"
                                               type="radio"
                                               value="1"
                                             />
@@ -717,7 +717,7 @@
                                       ></label>
                                     </div>
                                   </div>
-                                  <div class="_h69t7tv hidden block-md">
+                                  <div class="hidden__md hidden block-md">
                                     <div
                                       id="expectations_option_very_low"
                                       aria-disabled="false"
@@ -733,7 +733,7 @@
                                               aria-labelledby="expectations_option_very_low-row-title"
                                               aria-describedby="expectations_option_very_low-row-subtitle"
                                               id="expectations_option_very_low-row-radio-button"
-                                              class="_83s1a2"
+                                              class="radio__button"
                                               type="radio"
                                               value="1"
                                             />
@@ -790,7 +790,7 @@
                               <div class="_1fopc40">
                                 <fieldset class="_128xze2">
                                   <legend class="_1gyjybc">
-                                    <span class="text__highlight dir dir-ltr"
+                                    <span class="text_highlight dir dir-ltr"
                                       >Was anything extra special?</span
                                     >
                                   </legend>
@@ -829,7 +829,7 @@
                                             "
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/pictures/a86838aa-73d2-4e36-8e74-ca7c201f3552.jpg');
                                               background-size: contain;
@@ -881,7 +881,7 @@
                                             "
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/pictures/d71791bf-98fd-4c89-859f-8621e2ce8702.jpg');
                                               background-size: contain;
@@ -933,7 +933,7 @@
                                             "
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/pictures/6886b2f1-721e-4535-a631-0cf402d2b674.jpg');
                                               background-size: contain;
@@ -985,7 +985,7 @@
                                             "
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/pictures/a825700e-0490-4e47-bc73-1e92d07d4ed6.jpg');
                                               background-size: contain;
@@ -1037,7 +1037,7 @@
                                             "
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/pictures/44a44a1a-8763-4a9e-aa82-f2df823c69eb.jpg');
                                               background-size: contain;
@@ -1089,7 +1089,7 @@
                                             "
                                           />
                                           <div
-                                            class="_15p4g025"
+                                            class="background__img-position-center"
                                             style="
                                               background-image: url('https://a0.muscache.com/pictures/02792b05-73e6-4a6a-9b03-1964efe90fa0.jpg');
                                               background-size: contain;
@@ -1141,7 +1141,7 @@
                                 </section>
                               </div>
                               <div class="_1fopc40">
-                                <span class="text__highlight dir dir-ltr"
+                                <span class="text_highlight dir dir-ltr"
                                   >What could have been better?</span
                                 >
                                 <div
@@ -1155,7 +1155,7 @@
                                     id="improvement_tags_toggle_button_row-DLS-chipGroup-label"
                                   >
                                     <span
-                                      class="text__highlight dir dir-ltr"
+                                      class="text_highlight dir dir-ltr"
                                       id="chipGroupLabel"
                                       aria-hidden="true"
                                       >What could have been better?</span
@@ -1172,7 +1172,7 @@
                                       >
                                         Getting set up<span
                                           aria-hidden="true"
-                                          class="_1vwho579"
+                                          class="button__hidden-text"
                                           >Getting set up</span
                                         >
                                       </button>
@@ -1187,7 +1187,7 @@
                                       >
                                         Audio or video quality<span
                                           aria-hidden="true"
-                                          class="_1vwho579"
+                                          class="button__hidden-text"
                                           >Audio or video quality</span
                                         >
                                       </button>
@@ -1202,7 +1202,7 @@
                                       >
                                         Accuracy or expectations<span
                                           aria-hidden="true"
-                                          class="_1vwho579"
+                                          class="button__hidden-text"
                                           >Accuracy or expectations</span
                                         >
                                       </button>
@@ -1217,7 +1217,7 @@
                                       >
                                         Structure or style<span
                                           aria-hidden="true"
-                                          class="_1vwho579"
+                                          class="button__hidden-text"
                                           >Structure or style</span
                                         >
                                       </button>
@@ -1232,7 +1232,7 @@
                                       >
                                         Price or value<span
                                           aria-hidden="true"
-                                          class="_1vwho579"
+                                          class="button__hidden-text"
                                           >Price or value</span
                                         >
                                       </button>
@@ -1247,7 +1247,7 @@
                                       >
                                         Something else<span
                                           aria-hidden="true"
-                                          class="_1vwho579"
+                                          class="button__hidden-text"
                                           >Something else</span
                                         >
                                       </button>
