--- a/specific_trip.html
+++ b/specific_trip.html
@@ -335,7 +335,7 @@
                                                                         "
                                                                     /></picture>
                                                                     <div
-                                                                      class="_15p4g025"
+                                                                      class="background__img-position-center"
                                                                       style="
                                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/187cf174-8859-4bcc-bd8b-4960ad1298c1.jpeg?im_w=720&amp;sw_cache=trips_images');
                                                                         background-size: cover;
@@ -384,7 +384,7 @@
                                                                 "
                                                               >
                                                                 <span
-                                                                  class="text__highlight dir dir-ltr"
+                                                                  class="text_highlight dir dir-ltr"
                                                                   aria-live="assertive"
                                                                   >Your
                                                                   experience
@@ -487,7 +487,7 @@
                                                                         "
                                                                     /></picture>
                                                                     <div
-                                                                      class="_15p4g025"
+                                                                      class="background__img-position-center"
                                                                       style="
                                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/21b69e3e-7eb6-43ca-9bd1-ee0e9bb1d189.jpeg?im_w=720&amp;sw_cache=trips_images');
                                                                         background-size: cover;
@@ -567,7 +567,7 @@
                                                                         "
                                                                     /></picture>
                                                                     <div
-                                                                      class="_15p4g025"
+                                                                      class="background__img-position-center"
                                                                       style="
                                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-active_media/original/1e0e9e77-7050-4008-bed7-f035e056dd36.jpeg?im_w=720&amp;sw_cache=trips_images');
                                                                         background-size: cover;
@@ -647,7 +647,7 @@
                                                                         "
                                                                     /></picture>
                                                                     <div
-                                                                      class="_15p4g025"
+                                                                      class="background__img-position-center"
                                                                       style="
                                                                         background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-2038668-media_library/original/8ba0f562-198c-456d-b359-ed4e64c93679.jpeg?im_w=720&amp;sw_cache=trips_images');
                                                                         background-size: cover;
@@ -5880,7 +5880,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="text__highlight dir dir-ltr"
+                          <span class="text_highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -5889,7 +5889,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -5914,7 +5914,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -5955,7 +5955,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -5980,7 +5980,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -6139,7 +6139,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -6164,7 +6164,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="text__highlight dir dir-ltr"
+                                      <span class="text_highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
