--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1168,7 +1168,7 @@
                                                               "
                                                           /></picture>
                                                           <div
-                                                            class="_15p4g025"
+                                                            class="background__img-position-center"
                                                             style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-4016631-media_library/original/d881828a-4d4c-432e-b098-eb32bb1f8bfe.jpeg?im_w=720');
                                                               background-size: cover;
@@ -1292,7 +1292,7 @@
                                                               "
                                                           /></picture>
                                                           <div
-                                                            class="_15p4g025"
+                                                            class="background__img-position-center"
                                                             style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-4016631-media_library/original/2d442c31-362f-4250-bbe9-46bc68abacd1.jpeg?im_w=720');
                                                               background-size: cover;
@@ -1416,7 +1416,7 @@
                                                               "
                                                           /></picture>
                                                           <div
-                                                            class="_15p4g025"
+                                                            class="background__img-position-center"
                                                             style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-4016631-media_library/original/2aac9841-88f1-4805-a764-ba5104d8a839.jpeg?im_w=720');
                                                               background-size: cover;
@@ -1540,7 +1540,7 @@
                                                               "
                                                           /></picture>
                                                           <div
-                                                            class="_15p4g025"
+                                                            class="background__img-position-center"
                                                             style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-4016631-media_library/original/ccb29cf5-827c-41bb-bd9d-584a5f41f8cf.jpeg?im_w=720');
                                                               background-size: cover;
@@ -1664,7 +1664,7 @@
                                                               "
                                                           /></picture>
                                                           <div
-                                                            class="_15p4g025"
+                                                            class="background__img-position-center"
                                                             style="
                                                               background-image: url('https://a0.muscache.com/im/pictures/lombard/MtTemplate-4016631-media_library/original/71c625d0-7823-4c40-84a8-e1a5c79faca4.jpeg?im_w=720');
                                                               background-size: cover;
