--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1100,7 +1100,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                 >
                                   <span aria-hidden="true">574/1400</span
                                   ><span
-                                    class="text__highlight dir dir-ltr"
+                                    class="text_highlight dir dir-ltr"
                                     aria-atomic="true"
                                     aria-live="polite"
                                     >574 out of 1400 characters used</span
@@ -1356,7 +1356,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                             aria-labelledby="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-title"
                                             aria-describedby="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-subtitle"
                                             id="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-radio-button"
-                                            class="_83s1a2"
+                                            class="radio__button"
                                             aria-invalid="false"
                                             type="radio"
                                             data-veloute="info_where_are_you_broadcasting-1"
